--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/jpdik/Ana-Bot#readme",
   "dependencies": {
+    "bootbot": "^1.0.16",
     "dotenv": "^6.2.0",
     "watson-developer-cloud": "^3.15.1"
   }
